# APC-Final-Project

./: .gitignore  Final_Report_Skeleton.tex  LICENSE  README.md  UML.drawio  UML.drawio.html  Untitled.ipynb  modules.rst  pyproject.toml  requirements.txt  requirements_dev.txt  sample_config_file  setup.cfg  tox.ini  vehicle_class.py
.github/workflows/: tests.yml
APC 524 Final Project Report PDF LaTeX/: bibliography.bib  main.tex
configs/: sample_config_file
docs/: Makefile  RRT.rst  a_star.rst  conf.py  index.rst  installation_setup.rst
scripts/: driver.py
source/: Makefile  conf.py  index.rst  interface.rst  obstacles 2.rst  pathing_sim 2.rst  test.rst
src/: RRT_ref.ipynb  a_star.py  discretize.py  expand_obstacles.py  sample_config_file  vehicle_class.py
src/RRT/: RRT_algo.py  RRTalgo.py  collision_detection.py  obstacle_collision_detection.py  point_obstacle_collision_detection.py  polygon_functions.py  test_collision_detection.py  test_obstacle_collision_detection.py
src/obstacle_class/: circleObstacle.py  obstacle.py  rectangleObstacle.py  triangleObstacle.py
src/obstacles/: obstacles.py  test_circleObject.py  test_rectangleObject.py  test_rectangleObstacle.py  test_triangleObject.py
src/pathingSim/: RRTalgo.py  agent.py  algo_factory.py  environment.py  helper_rect_coord.py  obstacle.py  obstacles.py  pathing_algorithm.py  simulator.py  triangleObstacle.py  vehicle_class.py  vehicle_class_whelper.py  visualizer.py
src/vehicle/: vehicle_class.py
src/vehicle/Classes/: UAV.py  (+2 more)
src/vehicleLib/: UAV.py  car.py
src/vehicle_class/: UAV.py  car.py  tricycle.py  vehicle.py
src/visualizer_class/: visualizer.py
tests/: test_agent.py  test_algo_factory.py  test_circleObject.py  test_environment.py  test_package.py  test_rectangleObject.py  test_triangleObject.py
(+4 files in other folders)
