[metadata]
name = pathingSim
description = Generates a path from a initial position to a target in a potentially dynamic environment for a robot with given dynamic constraints
author = Lap Hei Lam
email = lhlam@princeton.edu
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir = 
    =src
packages = find:
install_requires = 
    numpy>=1.19.5
    matplotlib>=3.4.3
python_requires = >=3.7
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
